// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text color allows toggling the highlight color feature to selected text 1`] = `
"<!-- fp:paragraph -->
<p><mark style="background-color:rgba(0, 0, 0, 0);color:#f78da7" class="has-inline-color has-pale-pink-color">Hello this is a test</mark></p>
<!-- /fp:paragraph -->"
`;

exports[`Text color creates a paragraph block with the text color format 1`] = `
"<!-- fp:paragraph -->
<p>Hello <mark style="background-color:rgba(0,0,0,0);color:#cf2e2e" class="has-inline-color has-vivid-red-color">this is a test</mark></p>
<!-- /fp:paragraph -->"
`;

exports[`Text color supports old text color format using "span" tag 1`] = `
"<!-- fp:paragraph -->
<p>this <span class="has-inline-color has-green-color">is</span> <span class="has-inline-color has-red-color">test</span></p>
<!-- /fp:paragraph -->

<!-- fp:paragraph -->
<p><span style="color:#08a5e9" class="has-inline-color">this is a test</span></p>
<!-- /fp:paragraph -->"
`;
